assets/styles/style.css
/* ... */
/* i {
  color: hsl(var(--clr-white));
} */

/* ------------------- */
/* Layout              */
/* ------------------- */

header {
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: width 0.25s ease-in;
  -o-transition: width 0.25s ease-in;
  transition: width 0.25s ease-in;
  grid-area: header;
}

main {
  -webkit-box-flex: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  width: 100%;
  padding-bottom: 3.5rem;
  -webkit-transition: width 0.25s ease-in;
  -o-transition: width 0.25s ease-in;
  transition: width 0.25s ease-in;
  grid-area: main;
}

aside {
  width: 350px;
  padding: 30px;
  position: fixed;
  background: hsl(var(--clr-blue-dark));
  top: 0;
  right: -350px;
  bottom: 0;
  -webkit-transition: right 0.25s ease-in;
  -o-transition: right 0.25s ease-in;
  transition: right 0.25s ease-in;
  grid-area: aside;
  overflow: hidden;
}

footer {
  width: 100%;
  text-align: center;
  padding-top: 0.5rem;
  -webkit-transition: width 0.25s ease-in;
  -o-transition: width 0.25s ease-in;
  transition: width 0.25s ease-in;
  grid-area: footer;
}

/* ------------------- */
/* Components          */
/* ------------------- */

/* SCROLLBAR */

/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: transparent;
  border-radius: 0px 20px 20px 0px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: hsl(var(--clr-blue-accent));
  border-radius: 20px;
}

/* HEADER */

header .logo {
  width: 50px;
  height: 50px;
}

header .logo:hover {
  -webkit-animation: rotation 2s linear 0s infinite;
  animation: rotation 2s linear 0s infinite;
}

header .logo img {
  width: 50px;
}

header .nav-toggle {
  position: relative;
  width: 36px;
  height: 28px;
}

header .nav-toggle .toggle-line {
  width: 36px;
  height: 2px;
  background: white;
  display: block;
  position: absolute;
  -webkit-transition: all 0.15s ease-in;
  -o-transition: all 0.15s ease-in;
  transition: all 0.15s ease-in;
}

header .nav-toggle .toggle-line:first-child {
  top: 5px;
}

header .nav-toggle .toggle-line:nth-child(2) {
  top: 13px;
}

header .nav-toggle .toggle-line:last-child {
  bottom: 5px;
}

header .nav-toggle:hover {
  cursor: pointer;
}

header .nav-toggle.active:hover {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-transition: -webkit-transform 0.4s linear;
  transition: -webkit-transform 0.4s linear;
  -o-transition: transform 0.4s linear;
  transition: transform 0.4s linear;
  transition: transform 0.4s linear, -webkit-transform 0.4s linear;
}

header .nav-toggle:hover .toggle-line:first-child {
  top: 3px;
}

header .nav-toggle:hover .toggle-line:last-child {
  bottom: 3px;
}

header .nav-toggle.active .toggle-line:first-child,
header .nav-toggle.active:hover .toggle-line:first-child {
  top: 3px;
  -webkit-transform: translateY(10px) rotate(45deg);
  -ms-transform: translateY(10px) rotate(45deg);
  transform: translateY(10px) rotate(45deg);
}

header .nav-toggle.active .toggle-line:nth-child(2) {
  opacity: 0;
}

header .nav-toggle.active .toggle-line:last-child,
header .nav-toggle.active:hover .toggle-line:last-child {
  bottom: 3px;
  -webkit-transform: translateY(-10px) rotate(-45deg);
  -ms-transform: translateY(-10px) rotate(-45deg);
  transform: translateY(-10px) rotate(-45deg);
}

/* SIDEBAR */
aside h2 {
  padding-top: 1.5rem;
}

.aside-main,
.aside-contact-form {
  position: absolute;
  width: 100%;
  height: 100%;
  padding: 30px;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  -webkit-transition: all 0.3s ease-in;
  -o-transition: all 0.3s ease-in;
  transition: all 0.3s ease-in;
}

.aside-main {
  -webkit-transform: translateX(-120%);
  -ms-transform: translateX(-120%);
  transform: translateX(-120%);
  opacity: 0;
}

.aside-main.active {
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  opacity: 1;
}

.aside-contact-form {
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  opacity: 0;
}

.aside-contact-form.active {
  -webkit-transform: translateX(0%);
  -ms-transform: translateX(0%);
  transform: translateX(0%);
  opacity: 1;
}

aside.active {
  right: 0;
  -webkit-box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.6);
  box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.6);
}

aside.active ~ *,
*:has(~ aside.active) {
  width: calc(100% - 350px);
}

aside .socials p {
  font-weight: 300;
}

aside .socials i:not(.fa-chevron-right) {
  font-size: var(--fs-700);
  padding: 10px;
}

aside .socials .fa-chevron-right {
  padding: 10px;
}

aside .socials i:hover {
  cursor: pointer;
  -webkit-transform: scale(1.15);
  -ms-transform: scale(1.15);
  transform: scale(1.15);
  -webkit-transition: -webkit-transform 0.15s ease-in;
  transition: -webkit-transform 0.15s ease-in;
  -o-transition: transform 0.15s ease-in;
  transition: transform 0.15s ease-in;
  transition: transform 0.15s ease-in, -webkit-transform 0.15s ease-in;
}

/* ALIEN ANIMATION */

.alien {
  width: 100px;
  display: block;
  position: absolute;
  -webkit-transform: rotate(-20deg);
  -ms-transform: rotate(-20deg);
  transform: rotate(-20deg);
  bottom: -100px;
  right: -100px;
}

aside.active .alien {
  -webkit-animation: appear 0.3s ease-in 0.4s 1 normal forwards,
    floatRotate 5s ease 1s infinite;
  animation: appear 0.3s ease-in 0.4s 1 normal forwards,
    floatRotate 5s ease 1s infinite;
}
/* ... */

